피드백 반영 및 기본 요구사항 구현